# AgentRun

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  docker-compose.yml  docker_hub_deploy.sh  pyproject.toml  update_docker.sh
.github/workflows/: test.yml
agentrun/: __init__.py
agentrun-api/: docker-compose.yml  requirements.txt
agentrun-api/docker/api/: Dockerfile
agentrun-api/docker/code_runner/: Dockerfile  requirements.txt
agentrun-api/src/api/: main.py
agentrun-api/src/code_runner/: main.py
agentrun_plus/: .env.dev  .env.prod  __init__.py  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.sh  docker-compose.test.yml  docker-compose.yml  docker-compose.yml.backup  update_docker.sh
agentrun_plus/api/: api.py  backend.py  main.py  mcp_client.py  mcp_server.py
agentrun_plus/code_runner/: __init__.py  api.py  main.py
agentrun_plus/docker/api/: Dockerfile  pip.conf  requirements.txt
agentrun_plus/docker/code_runner/: Dockerfile  requirements.txt  runner_requirements.txt
docker/api/: Dockerfile
docker/code_runner/: Dockerfile  runner_requirements.txt
docs/: release_notes.md
k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  namespace.yaml  persistent-volume.yaml  python-runner-deployment.yaml  python-runner-service.yaml
memory-bank/: mcpServer.md
tests/: conftest.py  run_curl.sh  test_agentrun.py  test_agentrun_api.py  test_agentrun_mcp.py  test_agentrun_mcp_client.py  test_agentrun_runner.py
